# ontology-patterns-backend

./: .gitignore  Dockerfile  README.md  __main__.py  gather_files.py  merged_files.txt  nohup.out  pyproject.toml  run
prompts/1_shortcut/: output_schema.json
prompts/1_shortcut/ollama/: baseline.txt  few_shot.txt
prompts/1_shortcut/openai/: baseline.txt  few_shot.txt
prompts/2_subclass/: output_schema.json
prompts/2_subclass/ollama/: few_shot.txt
prompts/2_subclass/openai/: baseline.txt  few_shot.txt
utils/: tgi.py
