[tool.poetry]
name = "api"
version = "0.1.0"
description = "patterns api"
authors = ["Peter Vajdecka <peter.vajdecka@oaks.cz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
fastapi = "^0.103.1"
python-dotenv = "^0.21.0"
openai = "^1.10.0"
gunicorn = "^21.2.0"
uvicorn = "^0.29.0"
pydantic-settings = "^2.3.4"
tools = "^0.1.9"
common = "^0.1.2"
redis = "^5.2.1"
pymongo = "^4.11.2"
ollama = "^0.4.7"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
black = "^24.4.2"
flake8 = "^7.1.0"
isort = "^5.13.2"
autopep8 = "^2.3.1"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
